<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/garden"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/garden" />

    <ImageView
        android:id="@+id/hall"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/hall" />

    <ImageView
        android:id="@+id/station"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/garden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/station" />

    <ImageView
        android:id="@+id/university"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/hall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/university" />

    <TextView
        android:id="@+id/university_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/university_rating"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/hall"
        app:layout_constraintEnd_toEndOf="@+id/university"
        app:layout_constraintStart_toStartOf="@+id/university"
        app:layout_constraintTop_toBottomOf="@+id/university_caption" />

    <TextView
        android:id="@+id/garden_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garden"
        android:textSize="20sp"
        android:textStyle="bold"

        android:theme="@style/NavyText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/garden"
        app:layout_constraintStart_toStartOf="@+id/garden"
        app:layout_constraintTop_toBottomOf="@+id/garden"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/hall_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hall"
        android:textSize="20sp"
        android:textStyle="bold"

        android:theme="@style/NavyText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/hall"
        app:layout_constraintStart_toStartOf="@+id/hall"
        app:layout_constraintTop_toBottomOf="@+id/hall"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/university_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/university"
        android:textSize="20sp"

        android:textStyle="bold"
        android:theme="@style/NavyText"
        app:layout_constraintBottom_toTopOf="@+id/hall"
        app:layout_constraintEnd_toEndOf="@+id/university"
        app:layout_constraintStart_toStartOf="@+id/university"
        app:layout_constraintTop_toBottomOf="@+id/university"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/station_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/NavyText"

        app:layout_constraintBottom_toTopOf="@+id/garden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/station"
        app:layout_constraintTop_toBottomOf="@+id/station"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/hall_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hall_rating"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/hall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hall_caption" />

    <TextView
        android:id="@+id/station_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_rating"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/garden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/station"
        app:layout_constraintTop_toBottomOf="@+id/station_caption" />

    <TextView
        android:id="@+id/garden_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/garden_rating"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/garden"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/garden"
        app:layout_constraintTop_toBottomOf="@+id/garden_caption" />
</androidx.constraintlayout.widget.ConstraintLayout>